[package]
name = "syntek-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Memory safety and security primitives for Syntek"

[dependencies]
zeroize.workspace = true
secrecy.workspace = true
ring.workspace = true
thiserror.workspace = true
serde.workspace = true
hex = "0.4"
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
