[package]
name = "syntek-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AES-256-GCM encryption, Argon2id hashing, and HMAC-SHA256 for Syntek modules"
repository = "https://git.syntek-studio.com/syntek/syntek-modules"

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
thiserror.workspace = true
base64ct.workspace = true

[dev-dependencies]
proptest = "1.5"
hex = "0.4"
