[package]
name = "syntek-dev"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Syntek development CLI — manage services, tests, linting, and the database"
repository = "https://git.syntek-studio.com/syntek/syntek-modules"

[[bin]]
name = "syntek-dev"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true

# CLI-specific — not shared with library crates
colored = "3"
indicatif = "0.18"
which = "8"
open = "5.3"
