[package]
name = "syntek-pyo3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PyO3 Django bindings exposing syntek-crypto field encryption"
repository = "https://git.syntek-studio.com/syntek/syntek-modules"

[lib]
name = "syntek_pyo3"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3.workspace = true
syntek-crypto = { path = "../syntek-crypto", version = "0.15.0" }
thiserror.workspace = true
base64ct.workspace = true

[dev-dependencies]
# base64ct is already in [dependencies] via workspace
