[project]
name = "syntek-authentication"
version = "0.1.0"
description = "Django authentication module with JWT, MFA, and advanced security features"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Syntek Dev", email = "dev@syntek.com"}
]
keywords = ["django", "authentication", "jwt", "mfa", "totp", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 6.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "django>=6.0.2",
    "strawberry-graphql>=0.291.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4.0",
    "argon2-cffi>=23.1.0",
    "pytz>=2024.1",
    # Note: Rust bindings (syntek_rust) provided by parent syntek-modules package
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["syntek_authentication"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Django app configuration
[tool.syntek-authentication.defaults]
# Default configuration (can be overridden in Django settings)
TOTP_REQUIRED = false
SPECIAL_CHARS_REQUIRED = true
PASSWORD_LENGTH = 12  # pragma: allowlist secret
COMMON_PASSWORD_CHECK = true  # pragma: allowlist secret
MAX_LOGIN_ATTEMPTS = 5
LOCKOUT_DURATION = 300
JWT_EXPIRY = 3600  # pragma: allowlist secret
REFRESH_TOKEN_EXPIRY = 86400  # pragma: allowlist secret
PASSWORD_HISTORY_COUNT = 5  # pragma: allowlist secret
